[package]
name = "mils"
version = "0.1.0"
authors = ["Eric Richter <richteer@lastprime.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#mediainfo = "0.2.0"
#serde = { version = "1.0", features = ["derive"] }
#serde_json = "1.0.41"
walkdir = "2.2.9"
json = "0.12.0"
clap = {version = "~2.27.0", features = ["yaml"]}
threadpool = "1.7.1"
